--- a/src/base.scss
+++ b/src/base.scss
@@ -1,22 +1,31 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
 
+$desktopMinWidth: 992px;
+@mixin desktop {
+	@media screen and (min-width: $desktopMinWidth) {
+		@content;
+	}
+}
+
 html {
 	display: flex;
 	justify-content: center;
 }
+
 body {
 	font-family: DM Sans, sans-serif;
-	max-width: 90rem;
 	width: 100%;
-
-	button,
-	span {
-		background-color: transparent;
-		border: 0;
-		color: #901c1c;
-		cursor: pointer;
-		padding: 0;
+	@include desktop {
+		max-width: 90rem;
 	}
+}
+
+button {
+	background-color: transparent;
+	border: 0;
+	color: #901c1c;
+	cursor: pointer;
+	padding: 0;
 }
 
 main {
@@ -32,10 +41,5 @@ $secondary1: #d3573c;
 $secondary2: #525252;
 $secondary3: #fafafa;
 $tersiary1: #757575;
-$desktopMinWidth: 992px;
+
 //mixin
-@mixin desktop {
-	@media screen and (min-width: $desktopMinWidth) {
-		@content;
-	}
-}
