--- a/src/components/mediaCardsSection/mediaCardsSection.scss
+++ b/src/components/mediaCardsSection/mediaCardsSection.scss
@@ -3,7 +3,7 @@
 	align-items: center;
 	justify-content: center;
 	flex-wrap: wrap;
-	@include desktop {
-		width: 106.59%;
-	}
+	// @include desktop {
+	// 	width: 106.59%;
+	// }
 }
