--- a/src/components/form-modal/form-modal.html
+++ b/src/components/form-modal/form-modal.html
@@ -4,7 +4,7 @@
     <button class="close" type="button"></button>
     <div class="form-modal">
       <h1>Contactez-moi <br>
-        <%- nom %>
+        <%- name %>
       </h1>
       <form name="reserve" action="index.html" method="get">
         <div class="formData">
