--- a/src/components/form-modal/form-modal.scss
+++ b/src/components/form-modal/form-modal.scss
@@ -30,45 +30,7 @@
 			height: 900px;
 			max-width: 669px;
 		}
-		.close {
-			position: absolute;
-			right: 15px;
-			top: 15px;
-			width: 32px;
-			height: 32px;
-			opacity: 1;
-			cursor: pointer;
-			transform: scale(0.7);
-			z-index: 5;
-			@include desktop {
-				height: 61px;
-				width: 61px;
-				right: 23px;
-				top: 23px;
-			}
-			&::before,
-			&::after {
-				position: absolute;
-				left: 15px;
-				content: " ";
-				height: 33px;
-				width: 3px;
-				background-color: #fff;
-				@include desktop {
-					height: 68px;
-					width: 8px;
-					right: 30px;
-					top: 0;
-					left: auto;
-				}
-			}
-			&::before {
-				transform: rotate(45deg);
-			}
-			&::after {
-				transform: rotate(-45deg);
-			}
-		}
+
 		.form-modal {
 			padding: 15px 5%;
 			@include desktop {
@@ -158,6 +120,45 @@
 			top: 40%;
 			margin: 0 5%;
 		}
+	}
+}
+.close {
+	position: absolute;
+	right: 15px;
+	top: 15px;
+	width: 32px;
+	height: 32px;
+	opacity: 1;
+	cursor: pointer;
+	transform: scale(0.7);
+	z-index: 5;
+	@include desktop {
+		height: 61px;
+		width: 61px;
+		right: 23px;
+		top: 23px;
+	}
+	&::before,
+	&::after {
+		position: absolute;
+		bottom: 0;
+		content: " ";
+		height: 33px;
+		width: 3px;
+		background-color: #fff;
+		@include desktop {
+			height: 68px;
+			width: 8px;
+			right: 30px;
+			top: 0;
+			left: auto;
+		}
+	}
+	&::before {
+		transform: rotate(45deg);
+	}
+	&::after {
+		transform: rotate(-45deg);
 	}
 }
 // #validDiv {
