--- a/src/components/lightBox/lightBox.scss
+++ b/src/components/lightBox/lightBox.scss
@@ -1,5 +1,4 @@
 #lightBox {
-	display: none;
 	position: absolute;
 	width: 100%;
 	height: 103vh;
@@ -7,12 +6,11 @@
 	background-color: white;
 	left: 0;
 	top: 0;
-	&[visible="true"] {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		flex-direction: column;
-	}
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	overflow: hidden;
 	#displayCard {
 		display: flex;
 		justify-content: center;
@@ -65,14 +63,19 @@
 			height: 248px;
 			overflow: hidden;
 			border-radius: 5px;
+
 			@include desktop {
 				width: 1000px;
 				height: 100%;
+				// display: flex;
 			}
 			img {
 				@include desktop {
 					width: 100%;
 				}
+			}
+			video {
+				height: 100%;
 			}
 		}
 		#rightArrow {
